err
ETmatrix.cpp: In member function 'void ulscf::next(double)':
ETmatrix.cpp:62:8: error: expected ';' before 'funcc1'
  func1 funcc1(LL, kvalue, radius, pot, ul);
        ^
ETmatrix.cpp:62:43: error: statement cannot resolve address of overloaded function
  func1 funcc1(LL, kvalue, radius, pot, ul);
                                           ^
ETmatrix.cpp:63:8: error: expected ';' before 'funcc2'
  func2 funcc2 = func2(LL, kvalue, radius, pot, ul);
        ^
ETmatrix.cpp:63:51: error: statement cannot resolve address of overloaded function
  func2 funcc2 = func2(LL, kvalue, radius, pot, ul);
                                                   ^
ETmatrix.cpp:71:14: error: 'funcc1' was not declared in this scope
       *qgaus(funcc1, radius[0], radius[i])
              ^
ETmatrix.cpp:73:14: error: 'funcc2' was not declared in this scope
       *qgaus(funcc2, radius[i], radius[radius.size()-1])
              ^
ETmatrix.cpp: In member function 'double ulscf::delta_new()':
ETmatrix.cpp:79:8: error: expected ';' before 'funcc1'
  func1 funcc1 = func1(LL, kvalue, radius, pot, ul);
        ^
ETmatrix.cpp:79:51: error: statement cannot resolve address of overloaded function
  func1 funcc1 = func1(LL, kvalue, radius, pot, ul);
                                                   ^
ETmatrix.cpp:81:28: error: 'funcc1' was not declared in this scope
  double t1 = -kvalue*qgaus(funcc1, radius[0], radius[radius.size()-1]);
                            ^
make: *** [ETmatrix.o] Error 1
